--- a/changelog/1-3.en-US.md
+++ b/changelog/1-3.en-US.md
@@ -1,10 +1,15 @@
-# `1.3.0` 2023-12-12
+# `1.3.1` 2023-02-21
+
+## Changelog
+- Feature: Slide headline accepts br, i, u, b, strong and span HTML tags (#50)
+- Bugfix: correct title attribute in url overlay template (#51 - thanks to Alexander Pankow)
+- Bugfix: set text-indent to absolute value in url overlay template (#51 - thanks to Alexander Pankow)
+
+# `1.3.0` 2022-12-12
 
 ## Update Notes
 
 **New slide selection in CMS element**  
-
-[comment]: # ![slide selection in CMS element](/path/to/image.png).
 
 The slide selection in Elysium Slider CMS element has been revised. The aim is that shop managers can maintain and arrange the slides faster and more effectively. 
 So there is an overview of the selected slides, where slides can be repositioned, edited or deleted. The user experience has also been improved with helpful dialogues and hints in the slide selection.  
