--- a/changelog/1-3.de-DE.md
+++ b/changelog/1-3.de-DE.md
@@ -1,10 +1,16 @@
-# `1.3.0` 2023-12-12
+# `1.3.1` 2023-02-21
+
+## Changelog
+- Feature: In Slide Überschrift werden die HTML Tags br, i, u, b, strong und span akzeptiert (#50)
+- Bugfix: Title Attribut im Slide URL Overlay Template wurde korrigiert (#51 - Danke an Alexander Pankow)
+- Bugfix: Text-indent im Slide URL Overlay Template ist nun ein absoluter Wert (#51 - Danke an Alexander Pankow)
+
+# `1.3.0` 2022-12-12
 
 ## Update Notes
 
 **Neue Slide-Auswahl im Erlebniswelt-Element**  
 
-[comment]: # ![Slide-Auswahl im Erlebniswelt-Element](/path/to/image.png).
 
 Die Slide-Auswahl im Elysium Slider Erlebniswelt-Element wurde überarbeitet. Ziel ist dass Shop-Manager die Slides schneller und effektiver pflegen und anordnen können. 
 So gibt es eine Übersicht der ausgewählten Slides, in der Slides neu positioniert, bearbeitet oder gelöscht werden können. Auch wurde die Nutzererfahrung durch hilfreiche Dialoge und Hinweise in der Slide-Auswahl verbessert.
